[project]
name = "tree-browser"
version = "0.1.0"
description = "A minimal desktop web browser with hierarchical tabs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
]

[project.scripts]
tree-browser = "tree_browser.app:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tree_browser"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
